# brute-tree

./: .gitignore  Cargo.toml  Dockerfile  README.md
kube/: delete.sh  launch.sh
kube/resources/: server-pod.yaml  server-service.yaml  worker-deployment.yaml
src/: evaluate.rs  evolve.rs  heap_tree.rs  mod.rs  search.rs  tree.rs
src/dataset/: mnist.rs  mod.rs
src/server/: main.rs
src/worker/: main.rs
